2005-03-14  Alan Modra  <amodra@bigpond.net.au>

	* po/tr.po: Commit new Turkish translation.

2005-03-11  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.am: Remove references to em68klynx.o and esparclynx.o.
	* Makefile.in: Regenerated.
	* emulparams/m68klynx.sh, emulparams/sparclynx.sh: Remove.

2005-03-07  Nick Clifton  <nickc@redhat.com>

	* po/fr.po: Updated translation.

2005-03-05  Alan Modra  <amodra@bigpond.net.au>

	* po/ld.pot: Regenerate.

2005-03-02  Jan Beulich  <jbeulich@novell.com>

	* ldmain.c (remove_output): Use unlink_if_ordinary instead of unlink.
	* pe-dll.c (pe_dll_generate_implib): Likewise.

2005-02-24  Ben Elliston  <bje@au.ibm.com>

	* ldfile.c: Remove GNU960 conditional code.
	* emultempl/gld960.em: Likewise.
	* emultempl/gld960c.em: Likewise.
	* emultempl/lnk960.em: Likewise.

2005-02-24  Nick Clifton  <nickc@redhat.com>

	* emultempl/lnk960.em (lnk960_before_parse): Remove redundant
	empty string from calls to concat.

2005-02-23  Nick Clifton  <nickc@redhat.com>

	* emultempl/lnk960.em (lnk960_before_parse): Terminate list of
	arguments passed to concat() with a NULL.

	* emultempl/m68kcoff.em: Include ldexp.h and ldlang.h because they
	define types needed by ldfile.h

2005-02-23  Alan Modra  <amodra@bigpond.net.au>

	* pe-dll.c: Warning fixes.
	* emultempl/sunos.em: Likewise.

2005-02-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* ldlang.c (section_already_linked): Don't call
	bfd_section_already_linked for dynamic objects.

2005-02-22  Alan Modra  <amodra@bigpond.net.au>

	* ldexp.c: Warning fixes.
	* ldwrite.c: Likewise.
	* emultempl/elf32.em: Likewise.

2005-02-21  H.J. Lu  <hongjiu.lu@intel.com>

	* ldlang.c (lang_add_section): Check SEC_TIC54X_BLOCK for TI
	tic54x input only.
	(lang_size_sections_1): Check SEC_COFF_SHARED_LIBRARY for COFF
	and ECOFF output only.

2005-02-21  Alan Modra  <amodra@bigpond.net.au>

	* config.in: Regenerate.
	* configure: Regenerate.

2005-02-17  Zack Weinberg  <zack@codesourcery.com>
